# tatami_python

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: check-install.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  UnknownMatrix_8hpp.html  UnknownMatrix_8hpp_source.html  annotated.html  classes.html  classtatami__python_1_1UnknownMatrix-members.html  classtatami__python_1_1UnknownMatrix.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e3e8f0822406ab344b656e05f2c42fea.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacetatami__python.html  parallelize_8hpp.html  parallelize_8hpp_source.html  sparse__matrix_8hpp.html  sparse__matrix_8hpp_source.html  structtatami__python_1_1UnknownMatrixOptions-members.html  structtatami__python_1_1UnknownMatrixOptions.html  tatami__python_8hpp.html  tatami__python_8hpp_source.html  tatami_python.tag
docs/search/: all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_c.js  defines_0.js  files_d.js  functions_10.js  functions_5.js  functions_c.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_2.js  variables_5.js
include/tatami_python/: UnknownMatrix.hpp  dense_extractor.hpp  dense_matrix.hpp  parallelize.hpp  sparse_extractor.hpp  sparse_matrix.hpp  tatami_python.hpp  utils.hpp
tests/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
tests/lib/: CMakeLists.txt
tests/lib/src/: bindings.cpp
tests/src/tatami_python_test/: WrappedMatrix.py  __init__.py
tests/tests/: compare.py  helpers.py  simulate.py  test_dense_chunked.py  test_dense_simple.py  test_sparse_chunked.py  test_sparse_simple.py
